// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> renders progress bar 1`] = `
<div>
  <div
    class="sc-aXZVg cBzurQ"
  />
</div>
`;

exports[`<Progress /> renders secondary progress secondary 1`] = `
<div>
  <div
    class="sc-aXZVg lfbrmv"
  />
</div>
`;
